--- a/JJ001.ioc
+++ b/JJ001.ioc
@@ -11,44 +11,53 @@ Mcu.IP4=USB_DEVICE
 Mcu.IPNb=5
 Mcu.Name=STM32F103C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PC14-OSC32_IN
-Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB12
-Mcu.Pin11=PB13
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PB5
-Mcu.Pin15=PB6
-Mcu.Pin16=PB8
-Mcu.Pin17=VP_SYS_VS_ND
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
-Mcu.Pin2=PD0-OSC_IN
-Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA6
-Mcu.Pin9=PB11
-Mcu.PinsNb=20
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA5
+Mcu.Pin11=PB12
+Mcu.Pin12=PB13
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA11
+Mcu.Pin19=PA12
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PA15
+Mcu.Pin21=PB3
+Mcu.Pin22=PB4
+Mcu.Pin23=PB5
+Mcu.Pin24=PB6
+Mcu.Pin25=PB8
+Mcu.Pin26=VP_SYS_VS_ND
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin3=PD0-OSC_IN
+Mcu.Pin4=PD1-OSC_OUT
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Tx
 MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP.GPIO_Label=FUNKY_EC2
 PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
@@ -59,10 +68,20 @@ PA1.GPIO_Label=FUNKY_B
 PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
 PA1.Signal=GPIO_Input
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA10.GPIO_Label=SW1
+PA10.GPIO_PuPd=GPIO_PULLUP
+PA10.Locked=true
+PA10.Signal=GPIO_Input
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
 PA12.Signal=USB_DP
+PA15.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA15.GPIO_Label=SW2
+PA15.GPIO_PuPd=GPIO_PULLUP
+PA15.Locked=true
+PA15.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA2.GPIO_Label=FUNKY_PB
 PA2.GPIO_PuPd=GPIO_PULLUP
@@ -73,23 +92,61 @@ PA3.GPIO_Label=FUNKY_A
 PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.Locked=true
 PA3.Signal=GPIO_Input
-PA6.GPIOParameters=GPIO_PuPd
-PA6.GPIO_PuPd=GPIO_PULLUP
-PA6.Locked=true
-PA6.Signal=GPIO_Input
-PB11.GPIOParameters=GPIO_Speed
-PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB11.Locked=true
-PB11.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=EC8
+PA4.GPIO_PuPd=GPIO_PULLUP
+PA4.Locked=true
+PA4.Signal=GPIO_Input
+PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA5.GPIO_Label=EC7
+PA5.GPIO_PuPd=GPIO_PULLUP
+PA5.Locked=true
+PA5.Signal=GPIO_Input
+PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA8.GPIO_Label=EC4
+PA8.GPIO_PuPd=GPIO_PULLUP
+PA8.Locked=true
+PA8.Signal=GPIO_Input
+PA9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA9.GPIO_Label=EC3
+PA9.GPIO_PuPd=GPIO_PULLUP
+PA9.Locked=true
+PA9.Signal=GPIO_Input
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=LED1
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=LED2
 PB13.Locked=true
 PB13.Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_PuPd
+PB14.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB14.GPIO_Label=EC2
+PB14.GPIO_PuPd=GPIO_PULLUP
+PB14.Locked=true
+PB14.Signal=GPIO_Input
+PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB15.GPIO_Label=EC1
+PB15.GPIO_PuPd=GPIO_PULLUP
+PB15.Locked=true
+PB15.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB3.GPIO_Label=EC10
+PB3.GPIO_PuPd=GPIO_PULLUP
+PB3.Locked=true
+PB3.Signal=GPIO_Input
+PB4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB4.GPIO_Label=EC9
+PB4.GPIO_PuPd=GPIO_PULLUP
+PB4.Locked=true
+PB4.Signal=GPIO_Input
+PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB5.GPIO_Label=EC6
 PB5.GPIO_PuPd=GPIO_PULLUP
 PB5.Locked=true
 PB5.Signal=GPIO_Input
-PB6.GPIOParameters=GPIO_PuPd
+PB6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB6.GPIO_Label=EC5
 PB6.GPIO_PuPd=GPIO_PULLUP
 PB6.Locked=true
 PB6.Signal=GPIO_Input
@@ -98,6 +155,11 @@ PB8.GPIO_Label=FUNKY_C
 PB8.GPIO_PuPd=GPIO_PULLUP
 PB8.Locked=true
 PB8.Signal=GPIO_Input
+PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC13-TAMPER-RTC.GPIO_Label=EP
+PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Input
 PC14-OSC32_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC14-OSC32_IN.GPIO_Label=FUNKY_D
 PC14-OSC32_IN.GPIO_PuPd=GPIO_PULLUP
