--- a/JJ001.ioc
+++ b/JJ001.ioc
@@ -1,5 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C6T6A
 Mcu.Family=STM32F1
@@ -14,33 +15,41 @@ Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA5
-Mcu.Pin11=PB12
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PB15
-Mcu.Pin15=PA8
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA11
-Mcu.Pin19=PA12
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB0
+Mcu.Pin14=PB1
+Mcu.Pin15=PB10
+Mcu.Pin16=PB11
+Mcu.Pin17=PB12
+Mcu.Pin18=PB13
+Mcu.Pin19=PB14
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA15
-Mcu.Pin21=PB3
-Mcu.Pin22=PB4
-Mcu.Pin23=PB5
-Mcu.Pin24=PB6
-Mcu.Pin25=PB8
-Mcu.Pin26=VP_SYS_VS_ND
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin20=PB15
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA15
+Mcu.Pin27=PB3
+Mcu.Pin28=PB4
+Mcu.Pin29=PB5
 Mcu.Pin3=PD0-OSC_IN
+Mcu.Pin30=PB6
+Mcu.Pin31=PB7
+Mcu.Pin32=PB8
+Mcu.Pin33=PB9
+Mcu.Pin34=VP_SYS_VS_ND
+Mcu.Pin35=VP_SYS_VS_Systick
+Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=29
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Tx
@@ -102,6 +111,16 @@ PA5.GPIO_Label=EC7
 PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
 PA5.Signal=GPIO_Input
+PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA6.GPIO_Label=R5
+PA6.GPIO_PuPd=GPIO_PULLUP
+PA6.Locked=true
+PA6.Signal=GPIO_Input
+PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA7.GPIO_Label=R4
+PA7.GPIO_PuPd=GPIO_PULLUP
+PA7.Locked=true
+PA7.Signal=GPIO_Input
 PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA8.GPIO_Label=EC4
 PA8.GPIO_PuPd=GPIO_PULLUP
@@ -112,6 +131,26 @@ PA9.GPIO_Label=EC3
 PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Locked=true
 PA9.Signal=GPIO_Input
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=R3
+PB0.GPIO_PuPd=GPIO_PULLUP
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB1.GPIO_Label=R2
+PB1.GPIO_PuPd=GPIO_PULLUP
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB10.GPIO_Label=R1
+PB10.GPIO_PuPd=GPIO_PULLUP
+PB10.Locked=true
+PB10.Signal=GPIO_Input
+PB11.GPIOParameters=GPIO_Speed,GPIO_Label
+PB11.GPIO_Label=C1
+PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB11.Locked=true
+PB11.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=LED1
 PB12.Locked=true
@@ -150,11 +189,21 @@ PB6.GPIO_Label=EC5
 PB6.GPIO_PuPd=GPIO_PULLUP
 PB6.Locked=true
 PB6.Signal=GPIO_Input
+PB7.GPIOParameters=GPIO_Speed,GPIO_Label
+PB7.GPIO_Label=C2
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB8.GPIO_Label=FUNKY_C
 PB8.GPIO_PuPd=GPIO_PULLUP
 PB8.Locked=true
 PB8.Signal=GPIO_Input
+PB9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB9.GPIO_Label=R6
+PB9.GPIO_PuPd=GPIO_PULLUP
+PB9.Locked=true
+PB9.Signal=GPIO_Input
 PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=EP
 PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
